B-F Backup Sandbox 30.4.12/src/objects/Test_Case_Result__c.object
<CustomObject>
    <description>A Test Case Result represents the result of a specific Test Case Step.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Case_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Case_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Step</label>
        <referenceTo>Test_Case_Step__c</referenceTo>
        <relationshipLabel>Test Case Results</relationshipLabel>
        <relationshipName>Test_Case_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tested_On__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Tested On</label>
        <type>Date</type>
    </fields>
    <label>Test Case Result</label>
    <nameField>
        <displayFormat>TestResult-{000}</displayFormat>
        <label>Test Case Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>